[gd_scene load_steps=12 format=3 uid="uid://bjavf5h1yy5us"]

[ext_resource type="Texture2D" uid="uid://clfk18uxpm5ej" path="res://Sprites/Shark.png" id="1_03h2o"]
[ext_resource type="Script" uid="uid://bo88evb55wk5m" path="res://Scenes/shark.gd" id="1_87kak"]
[ext_resource type="AudioStream" uid="uid://c6foosngcchrx" path="res://Sounds/punch-03-352040.wav" id="3_cb72u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_87kak"]
atlas = ExtResource("1_03h2o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb72u"]
atlas = ExtResource("1_03h2o")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rxyh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87kak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb72u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyy8k"]
size = Vector2(31, 8)

[sub_resource type="CanvasTexture" id="CanvasTexture_4fqy1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cb72u"]
texture = SubResource("CanvasTexture_4fqy1")
modulate_color = Color(0, 0, 0, 0.313726)

[sub_resource type="CanvasTexture" id="CanvasTexture_urn1o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6rxyh"]
texture = SubResource("CanvasTexture_urn1o")

[node name="Shark" type="Area2D"]
collision_mask = 2
script = ExtResource("1_87kak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6rxyh")
autoplay = "default"
frame_progress = 0.353512

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_wyy8k")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cb72u")
bus = &"SFX"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 11.0
offset_bottom = -9.0
pivot_offset = Vector2(12, 0)
theme_override_styles/background = SubResource("StyleBoxTexture_cb72u")
theme_override_styles/fill = SubResource("StyleBoxTexture_6rxyh")
max_value = 4.0
step = 1.0
value = 1.0
show_percentage = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
